# syncro_note

./: .gitignore  CLAUDE.md  README.md
.claude/hooks/: post-bash-dd-archive-reminder.sh  pre-edit-guard.sh
app/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
doc/: INDEX_MAP.md  da-method.md  development-flow.md
python/: pyproject.toml  synchroni-sidecar.spec
python/audio/: sample02.rttm  sample02_ref.txt  sample_minutes_src.txt  script01.txt  script02.txt  script02_turns.json  script03_turns.json
python/models/: README.md
python/src/synchroni_note/: __init__.py
python/src/synchroni_note/bench/: __init__.py  diarization_bench.py  llm_bench.py  model_switch_bench.py  record_audio.py  sample_transcript.txt  stt_bench.py  vad_segment.py  whispercpp_bench.py
python/src/synchroni_note/diarization/: __init__.py  base.py  embedding_onnx.py  labeling.py  reference.py  rttm.py  simple_cluster.py
python/src/synchroni_note/pipeline/: __init__.py  calendar_parse.py  calendar_parse_sidecar.py  cleaning.py  cli.py  dist_entry.py  extract.py  model_switch.py  refine.py  sidecar.py  summarize.py  summarize_sidecar.py  transcribe.py
python/src/synchroni_note/realtime/: __init__.py  capture.py  stream_stt.py
python/src/synchroni_note/ui/: __init__.py  app.py
python/tests/: test_calendar_parse.py  test_cleaning.py  test_diarization.py  test_extract.py  test_labeling.py  test_llm_bench.py  test_model_switch.py  test_model_switch_bench.py  test_refine.py  test_smoke.py  test_stt_bench.py  test_summarize_materials.py  test_summarize_sidecar.py  test_vad_chunker.py  test_vad_segment.py
scripts/: README.md  build-app.sh  click.ps1  dd-index-gen.sh  doc-index-check.sh  shot-window.ps1  start-app.sh  start-ui.ps1  stop-app.sh  tauri-cdp.mjs
(+173 files in other folders)
