[project]
name = "synchroni-note"
version = "0.1.0"
description = "SynchroniNote - ローカル議事録ツール（評価/MVPハーネス）"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "gradio>=6.16.0",
    "kaldi-native-fbank>=1.22.3",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.3",
    "pywhispercpp>=1.5.0",
    "sounddevice>=0.5.5",
]

[project.scripts]
synchroni-note = "synchroni_note.pipeline.cli:main"
synchroni-note-ui = "synchroni_note.ui.app:main"
synchroni-note-stream = "synchroni_note.realtime.stream_stt:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
    "psutil>=7",
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synchroni_note"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
